--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 theme: minima
 title: Eleanor A. Power
 description: Eleanor A. Power's website
+minima:
+  social_links:
+    twitter: eleanorapower
+    github: eapower
