--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 theme: minima
 title: Eleanor A. Power
 description: Eleanor A. Power's website
+about: Asst Prof, Methodology, LSE
 minima:
   social_links:
     twitter: eleanorapower
